css fixed width on mobile
.quote-nav and .row on mobile marging and width fixed

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -425,13 +425,14 @@ ARROWS THAT TRACK CURSOR
     background-color: $gold;
     background-position: top center;
     background-repeat: no-repeat;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    // padding-top: 60px;
+    // padding-bottom: 60px;
     position: relative;
     // margin-top: 70px;
 }
 
 #topic-parent .container {
+    height: 300px;
     position: absolute;
     top: 100px;
     right: 0;
@@ -1223,6 +1224,11 @@ blockquote.default {
             height: auto;
         }
 
+        .row {
+            margin-right: 0;
+            margin-left: 0;
+        }
+
         .navbar-toggler-icon {
             background-image: url(../imgs/icon-menu.svg);
         }
@@ -1281,8 +1287,12 @@ blockquote.default {
             padding-bottom: 40px;
         }
 
+        #topic-parent .container {
+            height: 300px;
+        }
+
         .interested {
-            margin-top: 0;
+            margin-top: 15px;
         }
 
         .topic-link h3 {
@@ -1316,6 +1326,7 @@ blockquote.default {
 
         .quote-nav {
             bottom: 0;
+            width: 100%;
         }
 
         /* Place the timelime to the left */
